# basic

./: .gitignore  README.md  SchemaDocs.md  pyproject.toml
fram_stack_basic/: pyproject.toml
fram_stack_basic/src/fram_stack_basic/: main.py  run.py
src/farm_stack_basic/: main.py  run.py
