[project]
name = "fram-stack-basic"
version = "0.1.0"
description = ""
authors = [
    {name = "Harsh Deepanshu",email = "harsh.deepanshu2021@vitbhopal.ac.in"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = [{include = "fram_stack_basic", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "run:main_dev"
start = "run:main_prod"

